<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>vivetest</name>
    <version>0.0.3</version>
    <description>vive code test</description>
    <maintainer email="morgan@osrfoundation.org">Morgan Quigley</maintainer>
    <license>Apache License 2.0</license>
 
    <buildtool_depend>ament_cmake</buildtool_depend>
 
    <build_depend>rclcpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
 
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>


<!-- <?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vive_vr_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ian@todo.todo">ian</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> -->
